<resources>

    <!--misc-->
    <string name="app_name">Miqat</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="placeholder_timing" translatable="false">00:00</string>
    <string name="geo_api_key" translatable="false">AIzaSyCUSRQAQCa5CmKPWe_VWdlArClGjQTXAZE</string>
    <string name="about_api_url" translatable="false">http://aladhan.com/about</string>
    <string name="mosque_design_url" translatable="false">http://www.freepik.com/free-vector/mosque-silhouette-in-night-sky-with-crescent-moon-and-stars_870865.htm</string>
    <string name="qibla_with_google_url">https://qiblafinder.withgoogle.com/intl/en/</string>
    <string name="empty_string" translatable="false"/>

    <!--home screen-->
    <string name="up_next_title">You have</string>
    <string name="up_next_subtitle">Till <b>%1$s</b></string>
    <string name="action_location">Location</string>
    <string name="action_settings">Settings</string>
    <string name="sub_header_today">Today</string>
    <string name="sub_header_tomorrow">Tomorrow</string>
    <string name="action_notify">Notify</string>
    <string name="action_retry">Retry</string>
    <string name="action_qibla">Qibla direction</string>

    <!--empty state / intro-->
    <string name="intro_miqat_definition">Mīqāt (Arabic: ميقات) ‎‎means a stated place or time to establish a religious ritual.</string>
    <string name="action_add_location">Add location</string>
    <string name="intro_example" translatable="false">إِنَّ الصَّلَاةَ كَانَتْ عَلَى الْمُؤْمِنِينَ كِتَابًا <b>مَّوْقُوتًا</b></string>
    <string name="intro_location_card_title">How Miqat works</string>
    <string name="add_location_message">Prayer timings are calculated using your geographical location, timezone,
        method and Islamic school. All of which can be changed anytime in settings.
        \n\nWith your privacy in mind, Miqat will never access your location, you can tap the location icon anytime to update your location
    </string>
    <string name="noun_subtitle">noun</string>

    <!--errors and warnings-->
    <string name="home_error_connection_title">Can\'t load prayers</string>
    <string name="home_error_connection_prompt">No internet connection. We can notify you when prayers are available.</string>
    <string name="location_error_reverse_geolocation">Can\'t add location; system time is not set correctly</string>
    <string name="error_play_services">Google Play Services must be installed</string>
    <string name="home_error_logic_title">Something went wrong</string>
    <string name="home_error_logic_prompt">We\'re looking into the problem, please bear with us. Meanwhile, would you like to clear the database and start over?</string>
    <string name="action_clear">Clear</string>
    <string name="action_restart">Restart</string>
    <string name="home_error_connection_notify_confirmation">You will be notified when prayers are available</string>
    <string name="location_error_connection">Couldn\'t save your location, please retry</string>

    <!--preferences-->
    <string name="preference_key_design" translatable="false">preferenceKeyDesign</string>
    <string name="preference_title_design">Mosque art by Starline - Freepik.com</string>
    <string name="preferences_title_prayer_timings">Prayer Timings</string>
    <string name="preference_title_method">Method</string>
    <string name="preference_dialog_title_method">Pick method</string>
    <string name="preference_key_method" translatable="false">PreferenceKeyMethod</string>
    <string name="preference_summary_method">Method used to calculate prayer timings</string>
    <string name="preference_dialog_title_school">Pick school</string>
    <string name="preference_key_school" translatable="false">preferencesKeySchool</string>
    <string name="preference_summary_school">School according to which Asr timing is calculated</string>
    <string name="preference_title_school">School</string>
    <string name="preference_dialog_title_latitude">Pick method</string>
    <string name="preference_key_latitude" translatable="false">preferencesKeyLatitude</string>
    <string name="preference_summary_latitude">Method for adjusting times for higher latitudes</string>
    <string name="preference_title_latitude">Latitude adjustment method</string>
    <string name="preference_key_libraries" translatable="false">preferenceKeyLibraries</string>
    <string name="preferences_title_acknowledgement">Acknowledgements</string>
    <string name="preference_default_method" translatable="false">5</string>
    <string name="preference_default_school" translatable="false">0</string>
    <string name="preference_default_latitude" translatable="false">3</string>
    <string name="preference_title_libraries">Open source libraries</string>
    <string name="preference_key_api" translatable="false">preferenceKeyApi</string>
    <string name="preference_title_api">Al-Adhan API</string>

    <!--locations screen-->
    <string name="title_location">Location</string>
    <string name="rationale_location">Location permission is needed to locate your city</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title_location_method">Location</string>
    <string name="dialog_content_location_method">Would you like your location to be determined automatically?
        \n\n(You may be prompted to grant location permission)</string>
    <string name="dialog_positive_location_method">Determine automatically</string>
    <string name="dialog_negative_location_method">Manual search</string>
    <string name="action_play_services">Install</string>
    <string name="error_location_detection">Couldn\'t detect your location</string>
    <string name="action_location_manual">Search</string>
    <string name="up_next_mosque_anchor" translatable="false">000000</string>

    <!--home screen widget-->
    <string name="empty_state_widget">Prayers not loaded yet. Tap to open the app</string>

    <!--notifications-->
    <string name="notification_body_prayers_ready">You tried to view timings when you were offline.</string>
    <string name="notification_title_prayers_ready">View prayer timings in Miqat</string>
    <string name="action_time_settings">Settings</string>
    <string name="generic_error_connection">There seems to be a problem with your connection</string>

</resources>
