<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/simple_padding_medium"
    tools:showIn="@layout/activity_home">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_padding_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/simple_padding_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_big"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/noun_subtitle"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_size_secondary"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/simple_padding_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/intro_miqat_definition"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_primary"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/simple_padding_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/intro_example"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_primary"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_padding_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/simple_padding_small"
            android:paddingEnd="@dimen/simple_padding_large"
            android:paddingStart="@dimen/simple_padding_large"
            android:paddingTop="@dimen/simple_padding_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/intro_location_card_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_big"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/simple_padding_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_location_message"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_primary"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/simple_padding_large"/>

            <Button
                android:id="@+id/home_empty_state_add_location_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add_location"
                android:theme="@style/ButtonStyleHollow"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>