<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stateListAnimator="@drawable/appbar_always_elevated"
    tools:ignore="UnusedAttribute"
    tools:showIn="@layout/activity_home">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/home_collapsible_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="@color/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
        app:scrimAnimationDuration="300"
        app:titleEnabled="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_collapseMode="parallax">

            <TextView
                android:id="@+id/home_app_bar_mosque_anchor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/simple_padding_large"
                android:text="@string/up_next_mosque_anchor"
                android:textColor="@color/colorTextPrimaryDark"
                android:textSize="@dimen/text_size_huge"
                android:visibility="invisible"
                tools:ignore="RtlSymmetry"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/home_app_bar_mosque_anchor">

                <ImageView
                    android:id="@+id/home_app_bar_mosque_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/home_mosque_max_height"
                    android:src="@drawable/app_bar_mosque_flipping"
                    tools:ignore="ContentDescription"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/home_app_bar_text_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/simple_padding_large"
                android:paddingStart="@dimen/simple_padding_large"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/home_app_bar_timing_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/up_next_title"
                    android:textColor="@color/colorTextSecondaryDark"
                    android:textSize="@dimen/text_size_primary"/>

                <TextView
                    android:id="@+id/home_app_bar_timing_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/placeholder_timing"
                    android:textColor="@color/colorTextPrimaryDark"
                    android:textSize="@dimen/text_size_huge"/>

                <TextView
                    android:id="@+id/home_app_bar_timing_subtitle_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/placeholder"
                    android:textColor="@color/colorTextSecondaryDark"
                    android:textSize="@dimen/text_size_primary"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/home_app_bar_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"/>

    </android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>